--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <div id="contact-info">
                   <a href="mailto:hello@kaylajamesllc.com"><img src="img/icon-envelope.png" id="envelope" alt="e-mail" /></a>
                     <a href="mailto:hello@kaylajamesllc.com">hello@kaylajamesllc.com</a>
+                    <img src="img/icon-phone.png" alt="phone"><p>(805)290-2595</p>
                 </div>
               <h3 id="tagline">Dream it, Do it, Live it</h3>
                 <ul>
