--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       </header>
 
       <main>
+        <section id="main-photo">
+        </section>
         <section id="about">
           <div class="full-width">
             <div class="half-width">
@@ -49,7 +51,7 @@
                 <div id="contact-info">
                   <a href="mailto:hello@kaylajamesllc.com"><img src="img/icon-envelope.png" id="envelope" alt="e-mail" /></a>
                     <a href="mailto:hello@kaylajamesllc.com">hello@kaylajamesllc.com</a>
-                    <img src="img/icon-phone.png" alt="phone"><p>(805)290-2595</p>
+                    <p><img src="img/icon-phone.png" id="phone" alt="phone">(805)290-2595</p>
                 </div>
               <h3 id="tagline">Dream it, Do it, Live it</h3>
                 <ul>
