--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
               <img src="img/hand-n-hand.jpeg" id="contact-hand" alt="Makes the Dreamwork" />
             </div>
             <div class="half-width">
-              <h2>CONTACT</h2>
-                <div id="contact-info">
-                  <a href="mailto:hello@kaylajamesllc.com"><img src="img/icon-envelope.png" id="envelope" alt="e-mail" /></a>
-                    <a href="mailto:hello@kaylajamesllc.com">hello@kaylajamesllc.com</a>
-                    <p><img src="img/icon-phone.png" id="phone" alt="phone">(805)290-2595</p>
+              <div id="contact-info">
+                <h2>CONTACT</h2>
+                  <p><a href="mailto:hello@kaylajamesllc.com"><img src="img/icon-envelope.png" id="envelope" alt="e-mail" /></a>
+                    <a href="mailto:hello@kaylajamesllc.com">hello@kaylajamesllc.com</a><br>
+                    <img src="img/icon-phone.png" id="phone" alt="phone">(805)290-2595</p>
                 </div>
-              <h3 id="tagline">Dream it, Do it, Live it</h3>
+              <h3 class="tagline">Dream it, Do it, Live it</h3>
                 <ul>
                   <li><a href="https://www.linkedin.com/in/jentrekin" target="_blank"><img src="img/icon-connect.png" alt="social-media" /></a></li>
                   <li><a href="https://www.instagram.com/jentrekin" target="_blank"><img src="img/icon-instagram.png" alt="instagram" /></a></li>
